--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,9 @@
 body {
-    margin: auto;
-    width: 50%;
-    padding: 20px;
     font-family: arial,sans-serif;
     background-color:orangered;
-    margin-left: 400px;
-    margin-bottom: 50px;
+    margin: 0 auto;
+    text-align: left;
+    padding: 0px;
   }
 p {
     font-size: 18px;
@@ -21,25 +19,27 @@ h2 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 #ErstesBild {
+    width: 100%;
+    min-width: 600px;
     border-bottom: 250px solid black;
-    margin-top: 50px;
-    margin-left: 30px;
-    margin-right: 40px;
 }
 #ZweitesBild{
-    margin-left: 30px;
-    width: 250px;
-    height: 140px;
+    width: 100%;
+    height: 100%;
 }
 div {
     background-color:white;
-    width: 750px;
+    width: 100%;
     border: 5px solid grey;
     padding: 50px;
     margin-left: 30px;
 }
 main {
     background-color:white;
+    width: 50%;
+    margin: 0 auto;
+    padding: 55px 90px 0px 90px;
+    text-align: left;
 }
 h2 {
     margin-left: 30px;
